@@ -1,3 +1,5 @@
+- Refactor: Allow CreditsLimit rule subclassing
+
 30.9.1 (07-08-2020)
 - Fix: Unique acronym check should ignore blank values
 - Fix: Add official unit setter with primitive boolean param
